--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 
 <body>
 
-<!-- home
-================================================== -->
-<main class="s-home s-home--slides" id="app">
+<main class="s-home s-home--slides">
     <div class="home-slider">
         <div class="home-slider-img" style="background-image: url(images/slides/slide-01.jpg);"></div>
         <div class="home-slider-img" style="background-image: url(images/slides/slide-02.jpg);"></div>
@@ -36,17 +34,15 @@
         </div>
 
         <div class="row home-content__main">
-            <div class="col-seven home-content__text pull-right">
+            <div class="col-seven home-content__text pull-right" id="ss-merlin-statistics">
                 <h3>ss-merlin statistics</h3>
-
-                <h5 v-for="item in stats">{{ item.version }}: {{ item.count }} users</h5>
             </div>  <!-- end home-content__text -->
 
             <div class="col-five home-content__counter">
                 <h3>ss-merlin total have</h3>
                 <div class="home-content__clock">
                     <div class="top">
-                        <div class="time days">{{ totalUser }} <span>users</span></div>
+                        <div class="time days" id="total-user">0 <span>users</span></div>
                     </div>
                 </div>
             </div>
@@ -59,17 +55,15 @@
                     <span>GitHub</span>
                 </a>
             </li>
-        </ul> <!-- end home-social -->
+        </ul>
         <div class="row home-copyright">
             <span>Copyright &copy; 2019 ss-merlin</span>
             <span>Design by styleshout</span>
-        </div> <!-- end home-copyright -->
+        </div>
         <div class="home-content__line"></div>
-    </div> <!-- end home-content -->
-</main> <!-- end s-home -->
+    </div>
+</main>
 
-<!-- preloader
-================================================== -->
 <div id="preloader">
     <div id="loader">
         <div class="line-scale-pulse-out">
@@ -81,15 +75,9 @@
         </div>
     </div>
 </div>
-
-<!-- Java Script
-================================================== -->
-<script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/axios@0.19.0/dist/axios.min.js"></script>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
-<script src="js/data.js"></script>
 
 </body>
 
